# customer-retention-ai

./: .gitignore  README.md  architecture.md  conversational.txt  problem_statement.md  pyproject.toml
.github/workflows/: ci.yml
configs/: project.yaml
data/: telecom_customer_churn_feature_engineering.csv:Zone.Identifier
frontend/: .gitignore  README.md  __init__.py  app.py  pyproject.toml
frontend/src/: __init__.py
frontend/src/churn_ui/: __init__.py  config.py  schemas.py
frontend/src/churn_ui/pages/: home.py  reports.py  score_csv.py
frontend/src/churn_ui/services/: __init__.py  artifact_service.py  scoring_service.py
frontend/src/churn_ui/utils/: __init__.py  csv_utils.py
frontend/tests/: test_csv_utils.py  test_scoring_service.py
src/: __init__.py  compat.py  config.py  verification.py
src/features/: __init__.py  feature_engineering.py  preprocessing.py
src/models/: __init__.py  baselines.py  evaluation.py  inference.py  training.py
src/monitoring/: __init__.py  drift.py
src/pipelines/: __init__.py  batch_inference_pipeline.py  evaluation_pipeline.py  monitoring_pipeline.py  train_pipeline.py
src/steps/: __init__.py  eda.py  evaluate_model.py  feature_engineering.py  load_data.py  load_model.py  monitor_drift.py  score_batch.py  train_model.py
src/validation/: __init__.py  data_validation.py
tests/: __init__.py  test_baselines.py  test_data_validation.py  test_evaluation.py  test_feature_engineering.py  test_inference.py  test_monitoring.py  test_preprocessing.py  test_training.py  test_verification.py
